bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var a:String
    ^BDR:2: error: local variables must be initialized
var a:String
    ^BDR:6: error: not found: value True
  if (estSurMessage == True)
                       ^